2015-10-17  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generator/c_generate_common.rb: ptrdiff_t

2015-10-15  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample: Ported some samples from original opengl-bindings.

2015-10-14  vaiorabbit  <http://twitter.com/vaiorabbit>

	* opengl-bindings_c.gemspec: Added.

2015-10-13  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generate_ext_command_list.rb, generate_ext_enum_list.rb: Added.
	* gl.xml: Updated.

2015-10-12  vaiorabbit  <http://twitter.com/vaiorabbit>

	* c_generate_ext_command.rb: Supports extension entry points.4
	* opengl_c_impl.{dll/so/bundle} is renamed into opengl_c_impl.{dll/so/bundle}

2015-10-11  vaiorabbit  <http://twitter.com/vaiorabbit>

	* (Announce) First release.
